Fixed the results to work with dark mode and added a share option as well

--- a/app/static/css/analysisView.css
+++ b/app/static/css/analysisView.css
@@ -9,6 +9,12 @@
     transition: background-color 0.3s ease;
 }
 
+.drop-zone-text{
+    font-size: 1.2 rem;
+    font-weight: 500;
+    margin-bottom: 1rem;
+    color: rgb(54, 54, 54)
+}
 .drop-zone:hover {
     background-color: #e9ecef;
 }
@@ -97,4 +103,40 @@
 /* Add spacing between form groups */
 .custom-form .form-group:not(:last-child) {
     margin-right: 2rem;
+}
+
+[data-bs-theme="dark"] .drop-zone {
+    border: 2px dashed #6c757d;
+    border-radius: 10px;
+    padding: 40px;
+    text-align: center;
+    color: #6c757d;
+    background-color: #101111;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+[data-bs-theme="dark"] .drop-zone:hover {
+    background-color: #5c5f62;
+}
+
+
+[data-bs-theme="dark"] .dragover {
+    background-color: #234636;
+    border-color: #082a1a;
+}
+
+
+[data-bs-theme="dark"] .drop-zone-text{
+    font-size: 1.2 rem;
+    font-weight: 500;
+    margin-bottom: 1rem;
+    color: rgb(177, 177, 177)
+}
+
+[data-bs-theme="dark"] .data-grid div {
+    padding: 0.5rem;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #292828;
 }
